apps/penpot/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: penpot-frontend
  namespace: nori-cloud
spec:
  type: ClusterIP
  selector:
    app: penpot
    component: frontend
  ports:
    - port: 8080
      targetPort: 8080
      name: http
---
apiVersion: v1
kind: Service
metadata:
  name: penpot-backend
  namespace: nori-cloud
spec:
  type: ClusterIP
  selector:
    app: penpot
    component: backend
  ports:
    - port: 6060
      targetPort: 6060
      name: http
---
apiVersion: v1
kind: Service
metadata:
  name: penpot-exporter
  namespace: nori-cloud
spec:
  type: ClusterIP
  selector:
    app: penpot
    component: exporter
  ports:
    - port: 6061
      targetPort: 6061
      name: http
