apps/penpot/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: penpot
  namespace: nori-cloud
  labels:
    app: penpot
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`penpot.norriswu.me`)
      kind: Rule
      services:
        - name: penpot-frontend
          port: 8080
